@@ -12,6 +12,7 @@ Views 3.x-dev
     o #454754 by dww: Fix PGSQL related errors with comment author filtering.
     o #384286 by dww: Make it possible to expose the filter for "Node: Has new content"
     o #463634 by alienbrain: "Empty field name" incorrectly specified.
+    o #463580 by ximo: AJAX summary links broken in some displays.
 
   New Features:
     o #293841: Allow different back ends for Views to facilite things like flickr api, solr, rdf, etc.
